--- a/index.html
+++ b/index.html
@@ -6,21 +6,18 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
   <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  <meta property="og:description" content="SOCIAL MEDIA DESCRIPTION TAG TAG"/>
-  <meta property="og:url" content="URL OF THE WEBSITE"/>
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X630-->
-  <meta property="og:image" content="static/image/your_banner_image.png" />
-  <meta property="og:image:width" content="1200"/>
-  <meta property="og:image:height" content="630"/>
+  
+  <meta name="description" content="METARFENCE is the first metasurface-based system to defend human motion privacy against through-wall RFID sensing, achieving strong protection in temporal and spectral domains.">
+  <meta property="og:title" content="METARFENCE: Protecting Human Motion Privacy Against RFID Sensing"/>
+  <meta property="og:description" content="A novel metasurface-based defense system designed to obfuscate RFID signal patterns, protecting human motion privacy from through-wall adversarial sensing."/>
+  <meta property="og:url" content="https://yourwebsite.com/metarfence"/>
+  <meta property="og:image" content="static/image/metarfence_banner.png" />
 
+  <meta name="twitter:title" content="METARFENCE: RFID Motion Privacy Protection">
+  <meta name="twitter:description" content="Using programmable metasurfaces to guard against RFID-based motion privacy breaches.">
+  <meta name="twitter:image" content="static/images/metarfence_banner_twitter.png">
+  <meta name="keywords" content="RFID sensing, motion privacy, metasurface, wireless security, through-wall sensing">
 
-  <meta name="twitter:title" content="TWITTER BANNER TITLE META TAG">
-  <meta name="twitter:description" content="TWITTER BANNER DESCRIPTION META TAG">
-  <!-- Path to banner image, should be in the path listed below. Optimal dimenssions are 1200X600-->
-  <meta name="twitter:image" content="static/images/your_twitter_banner_image.png">
-  <meta name="twitter:card" content="summary_large_image">
-  <!-- Keywords for your paper to be indexed by-->
-  <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
@@ -54,19 +51,40 @@
             <h1 class="title is-1 publication-title">MetaRFence: Protecting Human Motion Privacy Against RFID Sensing via Metasurface</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
-              <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">Zheng Shi</a><sup>*</sup>,</span>
-                <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
-                  <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
-                  </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Zheng Shi</a><sup>*</sup>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Zhikai Ding</a><sup>*</sup>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Yanni Yang</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Zhenlin An</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Runyu Pan</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Yanling Bu</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Guoming Zhang</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Pengfei Hu</a>,
+                        </span>
+                        <span class="author-block">
+                          <a href="#" target="_blank">Jiannong Cao</a>
+                        </span>
+
                   </div>
 
-                  <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
-                  </div>
+            <div class="is-size-5 publication-authors">
+              <span class="author-block">Shandong University, University of Georgia, Nanjing University of Aeronautics and Astronautics, The Hong Kong Polytechnic University<br>IEEE Transactions on Mobile Computing (TMC), Sept. 2025</span>
+            </div>
+
 
                   <div class="column has-text-centered">
                     <div class="publication-links">
