--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <!-- Replace the content tag with appropriate information -->
   <meta name="description" content="DESCRIPTION META TAG">
   <meta property="og:title" content="SOCIAL MEDIA TITLE TAG"/>
-  
+
   <meta name="description" content="METARFENCE is the first metasurface-based system to defend human motion privacy against through-wall RFID sensing, achieving strong protection in temporal and spectral domains.">
   <meta property="og:title" content="METARFENCE: Protecting Human Motion Privacy Against RFID Sensing"/>
   <meta property="og:description" content="A novel metasurface-based defense system designed to obfuscate RFID signal patterns, protecting human motion privacy from through-wall adversarial sensing."/>
@@ -52,37 +52,37 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
                         <span class="author-block">
-                          <a href="#" target="_blank">Zheng Shi</a><sup>*</sup>,
+                          <a href="#" target="_blank">Zheng Shi</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Zhikai Ding</a><sup>*</sup>,
+                          <a href="#" target="_blank">Zhikai Ding</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Yanni Yang</a>,
+                          <a href="#" target="_blank">Yanni Yang</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Zhenlin An</a>,
+                          <a href="#" target="_blank">Zhenlin An</a><sup>2</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Runyu Pan</a>,
+                          <a href="#" target="_blank">Runyu Pan</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Yanling Bu</a>,
+                          <a href="#" target="_blank">Yanling Bu</a><sup>3</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Guoming Zhang</a>,
+                          <a href="#" target="_blank">Guoming Zhang</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Pengfei Hu</a>,
+                          <a href="#" target="_blank">Pengfei Hu</a><sup>1</sup>,
                         </span>
                         <span class="author-block">
-                          <a href="#" target="_blank">Jiannong Cao</a>
+                          <a href="#" target="_blank">Jiannong Cao</a><sup>4</sup>
                         </span>
 
                   </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block">Shandong University, University of Georgia, Nanjing University of Aeronautics and Astronautics, The Hong Kong Polytechnic University<br>IEEE Transactions on Mobile Computing (TMC), Sept. 2025</span>
+              <span class="author-block"><sup>1</sup>Shandong University, <sup>2</sup>University of Georgia, <sup>3</sup>Nanjing University of Aeronautics and Astronautics, <sup>4</sup>The Hong Kong Polytechnic University<br>IEEE Transactions on Mobile Computing (TMC)</span>
             </div>
 
 
@@ -165,7 +165,7 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Radio Frequency Identification (RFID) technology has emerged as a pervasive modality for human motion sensing in applications such as smart environments and healthcare monitoring. However, the inherent through-wall sensing capability of RFID technology raises critical privacy concerns regarding the unintended leakage of human motion information, a challenge that has not been adequately addressed. To fill this gap, we present a <u>meta</u>surface-based <u>RF</u>ID sensing de<u>fence</u> (<strong>Metafence</strong>), the first system designed to protect human motion privacy against adversarial through-wall RFID sensing. To this end, we first devise a programmable metasurface comprising 1-bit phase shifters that systematically obfuscate motion-induced signal patterns. Through comprehensive theoretical modeling and empirical investigations, we then characterize the metasurface's impact on RFID signals across temporal and spectral domains. However, our analysis reveals that it is non-trivial to achieve effective signal obfuscation in both domains, primarily due to a fundamental trade-off between increasing temporal signal variation and masking human motion in its spectrum. To overcome this, we judiciously devise a metasurface controlling strategy that jointly optimizes the signal entropy, variance, and spectrum distribution to reach a balance between temporal and spectral motion obfuscation. Our comprehensive experiments demonstrate that <strong>Metafence</strong> reduces adversarial through-wall motion detection rates to ≤6%, decreases the F1-score of human gesture recognition to ≤0.11 on average, and amplifies respiration rate estimation errors by 3×, establishing a robust defense mechanism for RFID-based motion privacy protection.
+            Radio Frequency Identification (RFID) technology has emerged as a pervasive modality for human motion sensing in applications such as smart environments and healthcare monitoring. However, the inherent through-wall sensing capability of RFID technology raises critical privacy concerns regarding the unintended leakage of human motion information, a challenge that has not been adequately addressed. To fill this gap, we present a <u>meta</u>surface-based <u>RF</u>ID sensing de<u>fence</u> (Metafence), the first system designed to protect human motion privacy against adversarial through-wall RFID sensing. To this end, we first devise a programmable metasurface comprising 1-bit phase shifters that systematically obfuscate motion-induced signal patterns. Through comprehensive theoretical modeling and empirical investigations, we then characterize the metasurface's impact on RFID signals across temporal and spectral domains. However, our analysis reveals that it is non-trivial to achieve effective signal obfuscation in both domains, primarily due to a fundamental trade-off between increasing temporal signal variation and masking human motion in its spectrum. To overcome this, we judiciously devise a metasurface controlling strategy that jointly optimizes the signal entropy, variance, and spectrum distribution to reach a balance between temporal and spectral motion obfuscation. Our comprehensive experiments demonstrate that Metafence reduces adversarial through-wall motion detection rates to ≤6%, decreases the F1-score of human gesture recognition to ≤0.11 on average, and amplifies respiration rate estimation errors by 3×, establishing a robust defense mechanism for RFID-based motion privacy protection.
           </p>
         </div>
       </div>
