--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
       <div id="results-carousel" class="carousel results-carousel">
        <div class="item">
         <!-- Your image here -->
-        <img src="static/images/carousel1.jpg" alt="MY ALT TEXT"/>
+        <img src="static/images/intro.jpg" alt="MY ALT TEXT"/>
         <h2 class="subtitle has-text-centered">
-          First image description.
+          MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
         </h2>
       </div>
       <div class="item">
