--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             </div>
 
 
-            <div class="column has-text-centered">
+            <!-- <div class="column has-text-centered"> -->
               <!-- <div class="publication-links">
                 <span class="link-block">
                   <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
@@ -134,7 +134,7 @@
                   </a>
                 </span>
               </div> -->
-            </div>
+            <!-- </div> -->
           </div>
         </div>
       </div>
@@ -151,8 +151,7 @@
           <source src="static/videos/banner_video.mp4" type="video/mp4">
         </video>
         <h2 class="subtitle has-text-centered">
-          Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat
-          pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus.
+          MetaRFence is the first metasurface-based system to protect human motion privacy against through-wall RFID sensing.
         </h2>
       </div>
     </div>
@@ -214,20 +213,18 @@
               Second image description.
             </h2>
           </div>
-          <div class="item">
-            <!-- Your image here -->
+          <!-- <div class="item">
             <img src="static/images/carousel3.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               Third image description.
             </h2>
           </div>
           <div class="item">
-            <!-- Your image here -->
             <img src="static/images/carousel4.jpg" alt="MY ALT TEXT" />
             <h2 class="subtitle has-text-centered">
               Fourth image description.
             </h2>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
@@ -241,13 +238,11 @@
   <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
-        <!-- Paper video. -->
         <h2 class="title is-3">Video Presentation</h2>
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
 
             <div class="publication-video">
-              <!-- Youtube embed code here -->
               <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
             </div>
@@ -260,33 +255,30 @@
 
 
   <!-- Video carousel -->
-  <section class="hero is-small">
+  <!-- <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
         <h2 class="title is-3">Another Carousel</h2>
         <div id="results-carousel" class="carousel results-carousel">
           <div class="item item-video1">
             <video poster="" id="video1" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
               <source src="static/videos/carousel1.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-video2">
             <video poster="" id="video2" autoplay controls muted loop height="100%">
-              <!-- Your video file here -->
               <source src="static/videos/carousel2.mp4" type="video/mp4">
             </video>
           </div>
           <div class="item item-video3">
-            <video poster="" id="video3" autoplay controls muted loop height="100%">\
-              <!-- Your video file here -->
+            <video poster="" id="video3" autoplay controls muted loop height="100%">
               <source src="static/videos/carousel3.mp4" type="video/mp4">
             </video>
           </div>
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End video carousel -->
 
 
