--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>MetaRFence: Protecting Human Motion Privacy Against RFID Sensing via Metasurface</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -51,7 +51,7 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">MetaRFence: Protecting Human Motion Privacy Against RFID Sensing
+            <h1 class="title is-2 publication-title">MetaRFence: Protecting Human Motion Privacy Against RFID Sensing
               via Metasurface</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
@@ -87,7 +87,7 @@
 
             <div class="is-size-5 publication-authors">
               <span class="author-block"><sup>1</sup>Shandong University, <sup>2</sup>University of Georgia,
-                <sup>3</sup>Nanjing University of Aeronautics and Astronautics, <sup>4</sup>The Hong Kong Polytechnic
+                <sup>3</sup>Nanjing University of Aeronautics and Astronautics,<br><sup>4</sup>The Hong Kong Polytechnic
                 University<br>IEEE Transactions on Mobile Computing (TMC)</span>
             </div>
 
@@ -194,41 +194,49 @@
 
 
   <!-- Image carousel -->
-  <section class="hero is-small">
-    <div class="hero-body">
-      <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/intro.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy
-              protection.
-            </h2>
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
+
+        <!-- First Item -->
+        <div class="item">
+          <div class="columns is-vcentered">
+            <div class="column is-half">
+              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
+            </div>
+            <div class="column is-half">
+              <h2 class="subtitle">
+                <strong>MetaRFence</strong> can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+              </h2>
+            </div>
           </div>
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/carousel2.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Second image description.
-            </h2>
-          </div>
-          <!-- <div class="item">
-            <img src="static/images/carousel3.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Third image description.
-            </h2>
-          </div>
-          <div class="item">
-            <img src="static/images/carousel4.jpg" alt="MY ALT TEXT" />
-            <h2 class="subtitle has-text-centered">
-              Fourth image description.
-            </h2>
-          </div> -->
         </div>
+
+        <!-- Second Item -->
+        <div class="item">
+          <div class="columns is-vcentered">
+            <div class="column is-half is-hidden-desktop">
+              <!-- Image first on mobile -->
+              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            </div>
+            <div class="column is-half">
+              <h2 class="subtitle">
+                This image demonstrates how our system adapts to varied wall types and environmental conditions to protect privacy.
+              </h2>
+            </div>
+            <div class="column is-half is-hidden-touch">
+              <!-- Image second on desktop -->
+              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            </div>
+          </div>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
   <!-- End image carousel -->
 
 
