--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             </div>
 
             <div class="is-size-5 publication-authors">
-              <span class="author-block"><sup>1</sup>Shandong University, <sup>2</sup>University of Georgia,
+              <span class="author-block"><sup>1</sup>Shandong University, <sup>2</sup>University of Pittsburgh,
                 <sup>3</sup>Nanjing University of Aeronautics and Astronautics,<br><sup>4</sup>The Hong Kong Polytechnic
                 University<br>IEEE Transactions on Mobile Computing (TMC)</span>
             </div>
@@ -194,46 +194,35 @@
 
 
   <!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+<section class="section">
+  <div class="container">
 
-        <!-- First Item -->
-        <div class="item">
-          <div class="columns is-vcentered">
-            <div class="column is-half">
-              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
-            </div>
-            <div class="column is-half">
-              <h2 class="subtitle">
-                <strong>MetaRFence</strong> can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
-              </h2>
-            </div>
-          </div>
-        </div>
-
-        <!-- Second Item -->
-        <div class="item">
-          <div class="columns is-vcentered">
-            <div class="column is-half is-hidden-desktop">
-              <!-- Image first on mobile -->
-              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
-            </div>
-            <div class="column is-half">
-              <h2 class="subtitle">
-                This image demonstrates how our system adapts to varied wall types and environmental conditions to protect privacy.
-              </h2>
-            </div>
-            <div class="column is-half is-hidden-touch">
-              <!-- Image second on desktop -->
-              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
-            </div>
-          </div>
-        </div>
-
+    <!-- Section 1: Image Left, Text Right -->
+    <div class="columns is-vcentered mb-6">
+      <div class="column is-7">
+        <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
+      </div>
+      <div class="column is-5">
+        <h2 class="subtitle">
+          MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+        </h2>
       </div>
     </div>
+
+    <!-- Section 2: Image Right, Text Left -->
+    <div class="columns is-vcentered mb-6">
+      <div class="column is-5">
+        <h2 class="subtitle">
+          We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+        </h2>
+      </div>
+      <div class="column is-7">
+        <img src="static/images/2.jpg" alt="" style="width: 100%; height: auto;" />
+      </div>
+    </div>
+
+    <!-- Add more sections as needed -->
+
   </div>
 </section>
 
