--- a/index.html
+++ b/index.html
@@ -194,38 +194,46 @@
 
 
   <!-- Image carousel -->
-<section class="section">
-  <div class="container">
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
 
-    <!-- Section 1: Image Left, Text Right -->
-    <div class="columns is-vcentered mb-6">
-      <div class="column is-7">
-        <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
-      </div>
-      <div class="column is-5">
-        <h2 class="subtitle">
-          MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
-        </h2>
-      </div>
+        <!-- First Item -->
+        <div class="item">
+          <div class="columns is-vcentered">
+            <div class="column is-7">
+              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
+            </div>
+            <div class="column is-5">
+              <h2 class="subtitle">
+                MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+              </h2>
+            </div>
+          </div>
+        </div>
+
+        <!-- Second Item -->
+        <div class="item">
+          <div class="columns is-vcentered">
+            <div class="column is-half is-hidden-desktop">
+              <!-- Image first on mobile -->
+              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            </div>
+            <div class="column is-half">
+              <h2 class="subtitle">
+                We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+              </h2>
+            </div>
+            <div class="column is-half is-hidden-touch">
+              <!-- Image second on desktop -->
+              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            </div>
+          </div>
+        </div>
+
     </div>
-
-    <!-- Section 2: Image Right, Text Left -->
-    <div class="columns is-vcentered mb-6">
-      <div class="column is-5">
-        <h2 class="subtitle">
-          We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
-        </h2>
-      </div>
-      <div class="column is-7">
-        <img src="static/images/2.jpg" alt="" style="width: 100%; height: auto;" />
-      </div>
-    </div>
-
-    <!-- Add more sections as needed -->
-
   </div>
 </section>
-
   <!-- End image carousel -->
 
 
