--- a/index.html
+++ b/index.html
@@ -213,10 +213,9 @@
         </div>
 
         <!-- Second Item -->
-        <div class="item">
+        <!-- <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-half is-hidden-desktop">
-              <!-- Image first on mobile -->
               <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
             <div class="column is-half">
@@ -225,11 +224,10 @@
               </h2>
             </div>
             <div class="column is-half is-hidden-touch">
-              <!-- Image second on desktop -->
               <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
           </div>
-        </div>
+        </div> -->
 
     </div>
   </div>
