--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>MetaRFence: Protecting Human Motion Privacy Against RFID Sensing via Metasurface</title>
-  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -213,7 +213,7 @@
         </div>
 
         <!-- Second Item -->
-        <!-- <div class="item">
+        <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-half is-hidden-desktop">
               <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
@@ -227,7 +227,7 @@
               <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
           </div>
-        </div> -->
+        </div>
 
     </div>
   </div>
