--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>MetaRFence: Protecting Human Motion Privacy Against RFID Sensing via Metasurface</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -197,6 +197,7 @@
 <section class="hero is-small">
   <div class="hero-body">
     <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
 
         <!-- First Item -->
         <div class="item">
@@ -216,19 +217,22 @@
         <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-half is-hidden-desktop">
+              <!-- Image first on mobile -->
               <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
             <div class="column is-half">
               <h2 class="subtitle">
-                We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+                This image demonstrates how our system adapts to varied wall types and environmental conditions to protect privacy.
               </h2>
             </div>
             <div class="column is-half is-hidden-touch">
-              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+              <!-- Image second on desktop -->
+              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
           </div>
         </div>
 
+      </div>
     </div>
   </div>
 </section>
