--- a/index.html
+++ b/index.html
@@ -218,16 +218,16 @@
           <div class="columns is-vcentered">
             <div class="column is-half is-hidden-desktop">
               <!-- Image first on mobile -->
-              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
             <div class="column is-half">
               <h2 class="subtitle">
-                This image demonstrates how our system adapts to varied wall types and environmental conditions to protect privacy.
+                We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
               </h2>
             </div>
             <div class="column is-half is-hidden-touch">
               <!-- Image second on desktop -->
-              <img src="static/images/carousel2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
           </div>
         </div>
