--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 
             <!-- <div class="column has-text-centered"> -->
-              <!-- <div class="publication-links">
+            <!-- <div class="publication-links">
                 <span class="link-block">
                   <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
@@ -151,7 +151,8 @@
           <source src="static/videos/banner_video.mp4" type="video/mp4">
         </video>
         <h2 class="subtitle has-text-centered">
-          MetaRFence is the first metasurface-based system to protect human motion privacy against through-wall RFID sensing.
+          MetaRFence is the first metasurface-based system to protect human motion privacy against through-wall RFID
+          sensing.
         </h2>
       </div>
     </div>
@@ -194,20 +195,20 @@
 
 
   <!-- Image carousel -->
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
-
+  <section class="hero is-small">
+    <div class="hero-body">
+      <div class="container">
         <!-- First Item -->
         <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-7">
-              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
+              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing"
+                style="width: 100%; height: auto;" />
             </div>
             <div class="column is-5">
               <h2 class="subtitle">
-                MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+                MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy
+                protection.
               </h2>
             </div>
           </div>
@@ -216,17 +217,15 @@
         <!-- Second Item -->
         <div class="item">
           <div class="columns is-vcentered">
-            <div class="column is-half is-hidden-desktop">
-              <!-- Image first on mobile -->
-              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
-            </div>
-            <div class="column is-half">
+            <div class="column is-3">
               <h2 class="subtitle">
-                We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains from different views: the compound strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+                We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and
+                spectral domains from different views: the compound strategy not only can effectively obfuscate the raw
+                motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal
+                features from different sensing algorithms.
               </h2>
             </div>
-            <div class="column is-half is-hidden-touch">
-              <!-- Image second on desktop -->
+            <div class="column is-7">
               <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
             </div>
           </div>
@@ -234,8 +233,7 @@
 
       </div>
     </div>
-  </div>
-</section>
+  </section>
   <!-- End image carousel -->
 
 
