--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
 
   <title>MetaRFence: Protecting Human Motion Privacy Against RFID Sensing via Metasurface</title>
-  <!-- <link rel="icon" type="image/x-icon" href="static/images/favicon.ico"> -->
+  <link rel="icon" type="image/png" href="static/images/paper.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro" rel="stylesheet">
 
   <link rel="stylesheet" href="static/css/bulma.min.css">
@@ -198,42 +198,45 @@
   <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
+
         <!-- First Item -->
         <div class="item">
           <div class="columns is-vcentered">
-            <div class="column is-7">
-              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing"
-                style="width: 100%; height: auto;" />
-            </div>
-            <div class="column is-5">
-              <h2 class="subtitle">
+            <div class="column is-3">
+              <h2 class="subtitle" style="text-align: justify;">
                 MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy
                 protection.
               </h2>
             </div>
+            <div class="column is-7">
+              <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 85%; height: auto;" />
+            </div>
+
           </div>
         </div>
 
         <!-- Second Item -->
         <div class="item">
           <div class="columns is-vcentered">
-            <div class="column is-3">
-              <h2 class="subtitle">
+            <div class="column is-7">
+              <img src="static/images/2.jpg" alt="Second Example" style="width: 120%; height: auto;" />
+            </div>
+            <div class="column is-4">
+              <h2 class="subtitle" style="text-align: justify;">
                 We visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and
                 spectral domains from different views: the compound strategy not only can effectively obfuscate the raw
                 motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal
                 features from different sensing algorithms.
               </h2>
             </div>
-            <div class="column is-7">
-              <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
-            </div>
+
           </div>
         </div>
 
       </div>
     </div>
   </section>
+
   <!-- End image carousel -->
 
 
