--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
   <!--End BibTex citation -->
 
 
-  <footer class="footer">
+  <!-- <footer class="footer">
     <div class="container">
       <div class="columns is-centered">
         <div class="column is-8">
@@ -339,7 +339,7 @@
         </div>
       </div>
     </div>
-  </footer>
+  </footer> -->
 
   <!-- Statcounter tracking code -->
 
