--- a/index.html
+++ b/index.html
@@ -194,12 +194,39 @@
   <!-- End paper abstract -->
 
 
-  <!-- Image carousel -->
+
   <section class="hero is-small">
     <div class="hero-body">
       <div class="container">
+        <div id="results-carousel" class="carousel results-carousel">
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
+            <h2 class="subtitle has-text-centered">
+              MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+            </h2>
+          </div>
+          <div class="item">
+            <!-- Your image here -->
+            <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            <h2 class="subtitle has-text-centered">
+              Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and
+              spectral domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+            </h2>
+          </div>
 
-        <!-- First Item -->
+        </div>
+      </div>
+    </div>
+  </section>
+
+
+
+  <!-- Image carousel -->
+  <!-- <section class="hero is-small">
+    <div class="hero-body">
+      <div class="container">
+
         <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-3">
@@ -215,7 +242,6 @@
           </div>
         </div>
 
-        <!-- Second Item -->
         <div class="item">
           <div class="columns is-vcentered">
             <div class="column is-9">
@@ -235,7 +261,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- End image carousel -->
 
@@ -260,38 +286,6 @@
     </div>
   </section>
   <!-- End youtube video -->
-
-
-  <!-- Video carousel -->
-  <!-- <section class="hero is-small">
-    <div class="hero-body">
-      <div class="container">
-        <h2 class="title is-3">Another Carousel</h2>
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item item-video1">
-            <video poster="" id="video1" autoplay controls muted loop height="100%">
-              <source src="static/videos/carousel1.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="item item-video2">
-            <video poster="" id="video2" autoplay controls muted loop height="100%">
-              <source src="static/videos/carousel2.mp4" type="video/mp4">
-            </video>
-          </div>
-          <div class="item item-video3">
-            <video poster="" id="video3" autoplay controls muted loop height="100%">
-              <source src="static/videos/carousel3.mp4" type="video/mp4">
-            </video>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-  <!-- End video carousel -->
-
-
-
-
 
 
   <!-- Paper poster -->
