--- a/index.html
+++ b/index.html
@@ -195,30 +195,34 @@
 
 
 
-  <section class="hero is-small">
-    <div class="hero-body">
-      <div class="container">
-        <div id="results-carousel" class="carousel results-carousel">
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing" style="width: 100%; height: auto;" />
-            <h2 class="subtitle has-text-centered">
-              MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
-            </h2>
-          </div>
-          <div class="item">
-            <!-- Your image here -->
-            <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
-            <h2 class="subtitle has-text-centered">
-              Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and
-              spectral domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
-            </h2>
-          </div>
+<section class="hero is-small">
+  <div class="hero-body">
+    <div class="container">
+      <div id="results-carousel" class="carousel results-carousel">
 
+        <div class="item has-text-centered">
+          <img src="static/images/intro.jpg"
+               alt="MetaRFence walking/breathing"
+               style="width: 80%; height: auto; display: inline-block;" />
+          <h2 class="subtitle" style="text-align: justify; font-size: 1.5rem; margin-top: 1.5rem;">
+            MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+          </h2>
         </div>
+
+        <div class="item has-text-centered">
+          <img src="static/images/2.jpg"
+               alt="Second Example"
+               style="width: 100%; height: auto;" />
+          <h2 class="subtitle" style="text-align: justify; font-size: 1.5rem; margin-top: 1.5rem;">
+            Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
+          </h2>
+        </div>
+
       </div>
     </div>
-  </section>
+  </div>
+</section>
+
 
 
 
@@ -289,7 +293,7 @@
 
 
   <!-- Paper poster -->
-  <section class="hero is-small is-light">
+  <!-- <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
         <h2 class="title">Poster</h2>
@@ -299,7 +303,7 @@
 
       </div>
     </div>
-  </section>
+  </section> -->
   <!--End paper poster -->
 
 
