--- a/index.html
+++ b/index.html
@@ -202,18 +202,22 @@
 
         <div class="item has-text-centered">
           <img src="static/images/intro.jpg"
-               alt="MetaRFence walking/breathing"
-               style="width: 80%; height: auto; display: inline-block;" />
-          <h2 class="subtitle" style="text-align: justify; font-size: 1.2rem; margin-top: 1.2rem;">
-            MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
-          </h2>
+              alt="MetaRFence walking/breathing"
+              style="width: 60%; height: auto; display: inline-block;" />
+
+          <div style="width: 60%; margin: 1.1rem auto 0 auto; text-align: justify;">
+            <h2 class="subtitle" style="font-size: 1.2rem;">
+              MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+            </h2>
+          </div>
         </div>
+
 
         <div class="item has-text-centered">
           <img src="static/images/2.jpg"
                alt="Second Example"
                style="width: 100%; height: auto;" />
-          <h2 class="subtitle" style="text-align: justify; font-size: 1.2rem; margin-top: 1.2rem;">
+          <h2 class="subtitle" style="text-align: justify; font-size: 1.2rem; margin-top: 1.1rem;">
             Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
           </h2>
         </div>
