--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@
             </div>
 
 
-            <!-- <div class="column has-text-centered"> -->
-            <!-- <div class="publication-links">
-                <span class="link-block">
+            <div class="column has-text-centered">
+              <div class="publication-links">
+                <!-- <span class="link-block">
                   <a href="https://arxiv.org/pdf/<ARXIV PAPER ID>.pdf" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -102,10 +102,10 @@
                     </span>
                     <span>Paper</span>
                   </a>
-                </span>
+                </span> -->
 
                 <span class="link-block">
-                  <a href="static/pdfs/supplementary_material.pdf" target="_blank"
+                  <a href="https://github.com/bsgbsg7/MetaRFence.github.io/tree/main/static/Supplementary" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -115,16 +115,16 @@
                 </span>
 
                 <span class="link-block">
-                  <a href="https://github.com/YOUR REPO HERE" target="_blank"
+                  <a href="https://github.com/bsgbsg7/MetaRFence.github.io/tree/main/static/Resources" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Resources</span>
                   </a>
                 </span>
 
-                <span class="link-block">
+                <!-- <span class="link-block">
                   <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
                     class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
@@ -132,9 +132,9 @@
                     </span>
                     <span>arXiv</span>
                   </a>
-                </span>
-              </div> -->
-            <!-- </div> -->
+                </span> -->
+              </div>
+            </div>
           </div>
         </div>
       </div>
@@ -148,7 +148,7 @@
       <div class="hero-body">
         <video poster="" id="tree" autoplay controls muted loop height="100%">
           <!-- Your video here -->
-          <source src="static/videos/banner_video.mp4" type="video/mp4">
+          <source src="static/videos/demo.mp4" type="video/mp4">
         </video>
         <h2 class="subtitle has-text-centered">
           MetaRFence is the first metasurface-based system to protect human motion privacy against through-wall RFID
@@ -195,37 +195,37 @@
 
 
 
-<section class="hero is-small">
-  <div class="hero-body">
-    <div class="container">
-      <div id="results-carousel" class="carousel results-carousel">
+  <section class="hero is-small">
+    <div class="hero-body">
+      <div class="container">
+        <div id="results-carousel" class="carousel results-carousel">
 
-        <div class="item has-text-centered">
-          <img src="static/images/intro.jpg"
-              alt="MetaRFence walking/breathing"
+          <div class="item has-text-centered">
+            <img src="static/images/intro.jpg" alt="MetaRFence walking/breathing"
               style="width: 85%; height: auto; display: inline-block;" />
 
-          <div style="width: 85%; margin: 1.1rem auto 0 auto; text-align: justify;">
-            <h2 class="subtitle" style="font-size: 1.2rem;">
-              MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy protection.
+            <div style="width: 85%; margin: 1.1rem auto 0 auto; text-align: justify;">
+              <h2 class="subtitle" style="font-size: 1.2rem;">
+                MetaRFence can effectively obfuscate walking and breathing patterns in RFID signals for motion privacy
+                protection.
+              </h2>
+            </div>
+          </div>
+
+
+          <div class="item has-text-centered">
+            <img src="static/images/2.jpg" alt="Second Example" style="width: 100%; height: auto;" />
+            <h2 class="subtitle" style="text-align: justify; font-size: 1.2rem; margin-top: 1.1rem;">
+              Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral
+              domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and
+              spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
             </h2>
           </div>
+
         </div>
-
-
-        <div class="item has-text-centered">
-          <img src="static/images/2.jpg"
-               alt="Second Example"
-               style="width: 100%; height: auto;" />
-          <h2 class="subtitle" style="text-align: justify; font-size: 1.2rem; margin-top: 1.1rem;">
-            Visualize and compare the eavesdropped signal and MetaRFence-affected signal in both temporal and spectral domains: the strategy not only can effectively obfuscate the raw motion signal in both temporal and spectral domains, but also can obfuscate the high-level signal features from different sensing algorithms.
-          </h2>
-        </div>
-
       </div>
     </div>
-  </div>
-</section>
+  </section>
 
 
 
