--- a/index.html
+++ b/index.html
@@ -56,31 +56,31 @@
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="#" target="_blank">Zheng Shi</a><sup>1</sup>,
+                <a href="https://zhengshi-wireless.github.io/" target="_blank">Zheng Shi</a><sup>1</sup>,
               </span>
               <span class="author-block">
                 <a href="#" target="_blank">Zhikai Ding</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Yanni Yang</a><sup>1</sup>,
+                <a href="https://yanniyang-polyu.github.io/" target="_blank">Yanni Yang</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Zhenlin An</a><sup>2</sup>,
+                <a href="https://anplus.github.io/" target="_blank">Zhenlin An</a><sup>2</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Runyu Pan</a><sup>1</sup>,
+                <a href="http://www.runyupan.com/" target="_blank">Runyu Pan</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Yanling Bu</a><sup>3</sup>,
+                <a href="https://faculty.nuaa.edu.cn/yanling/zh_CN/index.htm" target="_blank">Yanling Bu</a><sup>3</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Guoming Zhang</a><sup>1</sup>,
+                <a href="https://realzgm.github.io/" target="_blank">Guoming Zhang</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Pengfei Hu</a><sup>1</sup>,
+                <a href="https://perfecthu.github.io/" target="_blank">Pengfei Hu</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="#" target="_blank">Jiannong Cao</a><sup>4</sup>
+                <a href="https://www4.comp.polyu.edu.hk/~csjcao/" target="_blank">Jiannong Cao</a><sup>4</sup>
               </span>
 
             </div>
@@ -277,13 +277,12 @@
 
 
   <!-- Youtube video -->
-  <section class="hero is-small is-light">
+  <!-- <section class="hero is-small is-light">
     <div class="hero-body">
       <div class="container">
         <h2 class="title is-3">Video Presentation</h2>
         <div class="columns is-centered has-text-centered">
           <div class="column is-four-fifths">
-
             <div class="publication-video">
               <iframe src="https://www.youtube.com/embed/JkaxUblCGz0" frameborder="0" allow="autoplay; encrypted-media"
                 allowfullscreen></iframe>
@@ -292,7 +291,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
   <!-- End youtube video -->
 
 
