--- a/index.html
+++ b/index.html
@@ -320,27 +320,16 @@
   <!--End BibTex citation -->
 
 
-  <!-- <footer class="footer">
-    <div class="container">
-      <div class="columns is-centered">
-        <div class="column is-8">
-          <div class="content">
-
-            <p>
-              This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template"
-                target="_blank">Academic Project Page Template</a> which was adopted from the <a
-                href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
-              You are free to borrow the source code of this website, we just ask that you link back to this page in the
-              footer. <br> This website is licensed under a <a rel="license"
-                href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
-                Commons Attribution-ShareAlike 4.0 International License</a>.
-            </p>
-
-          </div>
-        </div>
+  <!-- ClustrMaps Visitor Map -->
+  <section class="section">
+    <div class="container has-text-centered">
+      <h2 class="title is-5">Visitor Map</h2>
+      <div style="margin-top: 1rem;">
+        <script type="text/javascript" id="clustrmaps"
+          src="//clustrmaps.com/map_v2.js?d=PvdyJ8DGxdYoGWWb7fnCfzWsLvKnoqAJ2DBsXIqeN8w&cl=ffffff&w=a"></script>
       </div>
     </div>
-  </footer> -->
+  </section>
 
   <!-- Statcounter tracking code -->
 
@@ -348,6 +337,8 @@
 
   <!-- End of Statcounter Code -->
 
+
+  
 </body>
 
 </html>
