--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                 <a href="http://www.runyupan.com/" target="_blank">Runyu Pan</a><sup>1</sup>,
               </span>
               <span class="author-block">
-                <a href="https://faculty.nuaa.edu.cn/yanling/zh_CN/index.htm" target="_blank">Yanling Bu</a><sup>3</sup>,
+                <a href="https://faculty.nuaa.edu.cn/yanling/zh_CN/index.htm" target="_blank">Yanling
+                  Bu</a><sup>3</sup>,
               </span>
               <span class="author-block">
                 <a href="https://realzgm.github.io/" target="_blank">Guoming Zhang</a><sup>1</sup>,
@@ -105,8 +106,8 @@
                 </span> -->
 
                 <span class="link-block">
-                  <a href="https://github.com/bsgbsg7/MetaRFence.github.io/tree/master/static/Supplementary" target="_blank"
-                    class="external-link button is-normal is-rounded is-dark">
+                  <a href="https://github.com/bsgbsg7/MetaRFence.github.io/tree/master/static/Supplementary"
+                    target="_blank" class="external-link button is-normal is-rounded is-dark">
                     <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                     </span>
@@ -320,16 +321,28 @@
   <!--End BibTex citation -->
 
 
-  <!-- ClustrMaps Visitor Map -->
+
+  <!-- ClustrMaps Visitor Map (Collapsible, Styled) -->
   <section class="section">
-    <div class="container has-text-centered">
-      <h2 class="title is-5">Visitor Map</h2>
-      <div style="margin-top: 1rem;">
-        <script type="text/javascript" id="clustrmaps"
-          src="//clustrmaps.com/map_v2.js?d=PvdyJ8DGxdYoGWWb7fnCfzWsLvKnoqAJ2DBsXIqeN8w&cl=ffffff&w=a"></script>
+    <div class="container is-max-desktop">
+      <div class="box"
+        style="max-width: 380px; margin: auto; padding: 1rem; border: 1px solid #ddd; border-radius: 10px;">
+
+        <details>
+          <summary style="font-weight: bold; font-size: 1.1rem; cursor: pointer;">
+            🌍 Show Visitor Map
+          </summary>
+          <div style="margin-top: 1rem;">
+            <script type="text/javascript" id="clustrmaps"
+              src="//clustrmaps.com/map_v2.js?d=PvdyJ8DGxdYoGWWb7fnCfzWsLvKnoqAJ2DBsXIqeN8w&cl=ffffff&w=a">
+              </script>
+          </div>
+        </details>
+
       </div>
     </div>
   </section>
+
 
   <!-- Statcounter tracking code -->
 
@@ -338,7 +351,7 @@
   <!-- End of Statcounter Code -->
 
 
-  
+
 </body>
 
 </html>
